- Criando as paginas iniciais e Login

--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -1,8 +1,8 @@
-$azulCinza: #698EBF;
-$azulClaro: #4178BF;
-$cinza: #868EA6;
-$branco: #D9C4B8;
-$preto: #0D0D0D;
+$azulEscuro: #2F82B4;
+$azulClaro: #3BB1F7;
+$verde: #00D1B2;
+$branco: #ffffff;
+$preto: #000000;
 $transparente: none;
 
 @mixin for-phone-only {
