update login css

--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -1,8 +1,9 @@
 $azulEscuro: #2F82B4;
+$azulMedio: #339cd9;
 $azulClaro: #3BB1F7;
 $verde: #00D1B2;
 $branco: #ffffff;
-$preto: #000000;
+$preto: #333333;
 $transparente: none;
 
 @mixin for-phone-only {
