- Ajuste visuais da pagina do perfil

--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -2,6 +2,8 @@ $azulEscuro: #2F82B4;
 $azulMedio: #339cd9;
 $azulClaro: #3BB1F7;
 $verde: #00D1B2;
+$vermelho: #F14668;
+$cinzaEscuro: #666666;
 $cinza: #cfcfcf;
 $branco: #ffffff;
 $preto: #333333;
