- Visualização das Avaliações

--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -9,6 +9,7 @@ $branco: #ffffff;
 $preto: #333333;
 $transparente: none;
 
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
 
 @mixin for-phone-only {
